Add hero section to landing page
Related to #3

Add a hero section to the landing page.

* Add a hero section below the header with a background image, heading, subheading, and two buttons linking to more details and information.
* Update the CSS to style the hero section, including the background image, heading, subheading, and buttons.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/ValdoYKING/joyeria-online/issues/3?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/landingPage.html
+++ b/landingPage.html
@@ -21,6 +21,34 @@
             margin: 0 15px;
             text-decoration: none;
         }
+        .hero {
+            background-image: url('hero-image.jpg');
+            background-size: cover;
+            background-position: center;
+            color: white;
+            text-align: center;
+            padding: 100px 20px;
+        }
+        .hero h1 {
+            font-size: 3em;
+            margin: 0;
+        }
+        .hero p {
+            font-size: 1.5em;
+            margin: 10px 0 20px;
+        }
+        .hero a {
+            background-color: #6a5acd;
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 5px;
+            margin: 0 10px;
+            display: inline-block;
+        }
+        .hero a:hover {
+            background-color: #483d8b;
+        }
         main {
             padding: 20px;
         }
@@ -60,6 +88,12 @@
             <a href="#contact">Contact</a>
         </nav>
     </header>
+    <section class="hero">
+        <h1>Discover the Beauty of Jewelry</h1>
+        <p>Explore our exquisite collection of fine jewelry.</p>
+        <a href="#details">More Details</a>
+        <a href="#info">More Information</a>
+    </section>
     <main>
         <section>
             <h2>Welcome to Our Store</h2>
